--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "babel-loader": "^8.2.3",
     "babel-polyfill": "^6.26.0",
     "css-loader": "^6.7.0",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "webpack-stream": "^7.0.0"
   },
   "dependencies": {
     "gsap": "^3.9.1"
